first Servlet Out

--- a/web/html/WFS1.html
+++ b/web/html/WFS1.html
@@ -192,7 +192,7 @@
               <div id="listAll" class="w3-container city" >
                   <ul class="list-group" id="ulAll">
                       <h2>All locations</h2>
-                      <li class="list-group-item "><a href="WayfinderLanding.html">Cras justo odio</a></li>
+                      <li class="list-group-item "><a href="http://localhost:8080/selectDestination">Cras justo odio</a></form></li>
                       <li class="list-group-item"><a href="WayfinderLanding.html">Cras justo odio</a></li>
                       <li class="list-group-item"><a href="WayfinderLanding.html">Cras justo odio</a></li>
                       <li class="list-group-item"><a href="WayfinderLanding.html">Karalis Questor</a></li>
